fix(userchrome): ensure urlbar doesn't get extra top margin when sidebar collapsed

--- a/userChrome.css
+++ b/userChrome.css
@@ -188,7 +188,7 @@
   }
 }
 
-/* Set text properties of current workspace indicator */
+/* Improve appearance of current workspace indicator */
 .zen-current-workspace-indicator-name {
   color: var(--lwt-text-color) !important;
   opacity: 1 !important;
@@ -196,8 +196,10 @@
 
 /* Workspace indicator (used as button / switcher) */
 @media (-moz-pref('zen.workspaces.show-workspace-indicator')) and (-moz-pref('uc.zenftw.workspace-button')) {
-  #urlbar {
-    margin-top: 5px !important;
+  @media (-moz-pref('zen.view.sidebar-expanded')) {
+    #urlbar {
+      margin-top: 5px !important;
+    }
   }
 
   #zen-current-workspace-indicator-container {
